src/objects/ensxapp__EnosixFramework__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for the enosiX Framework</description>
    <fields>
        <fullName>ensxapp__Compression_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTTP Compression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Customizing_ID__c</fullName>
        <defaultValue>&quot;SFDC&quot;</defaultValue>
        <description>Customizing-ID</description>
        <inlineHelpText>Allows for overriding the Smart Business Object configuration in SAP for a specific environment or application</inlineHelpText>
        <label>Customizing ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Client__c</fullName>
        <defaultValue>&quot;000&quot;</defaultValue>
        <description>SAP Client ID</description>
        <label>SAP Client</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Host__c</fullName>
        <label>SAP Host</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ensxapp__Timeout__c</fullName>
        <defaultValue>120000</defaultValue>
        <description>Request timeout in milliseconds</description>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>enosiX Framework</label>
</CustomObject>